Invention and law fixes

--- a/localization/replace/laws_l_english.yml
+++ b/localization/replace/laws_l_english.yml
@@ -912,9 +912,24 @@ grain_laws_rom: "Leges Frumentariae"
  greek_agriculture_inv: "Theophrastus"
  hindu_agriculture_inv: "Ayurveda"
  chinese_agriculture_inv: "Herbal Pharmasceuticals"
- latin_agriculture_inv__desc: ""
- greek_agriculture_inv__desc: ""
- hindu_agriculture_inv__desc: ""
- chinese_agriculture_inv__desc: ""
+ latin_agriculture_inv_desc: ""
+ greek_agriculture_inv_desc: ""
+ hindu_agriculture_inv_desc: ""
+ chinese_agriculture_inv_desc: ""
 
+ grain_shipments_modifier:0 "Grain Shipments"
+ subsidized_grain_modifier:0 "Subsidized Grain"
+ grain_dole_modifier:0 "Grain Dole"
+ revoked_grain_modifier:0 "Revoked Grain"
+ tannery_districts_invention:0 "Tannery Districts"
 
+ allow_nobles_education:0 "Allow Noble Education"
+ enables_latifundia_building_tt:0 "Enable Latifunida"
+
+ corruption_exclusion_office:0 ""
+ allow_soldier_land_grants_law:0 ""
+ choose_cult:0 ""
+ integrated_any_chinese_culture:0 ""
+ corruption_exclusion_senate:0 ""
+ corruption_exclusion_office:0 ""
+ against_electoral_bribery:0 ""
