Fix military traditions

--- a/localization/english/ti_uncategorized_l_english.yml
+++ b/localization/english/ti_uncategorized_l_english.yml
@@ -105,13 +105,11 @@ ea_tribal_path_civilization_desc:0 "Learning from the experiences of other civil
 unlocks_chinese_traditions_tt:0 "Unlock Chinese Traditions"
 unlocks_diyi_traditions_tt:0 "Unlock Di Traditions"
 
-# TI
+tradition_unlock_requirement_chinese:0 "$tradition_unlock_requirement_base$\n   @trigger_no! [GetCultureGroup('chinese').GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('rong').GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('samhan').GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('yi').GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('miao').GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('bashu_group').GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('tai').GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('yue').GetName|Y] Culture Group"
 
-tradition_unlock_requirement_chinese:0 "$tradition_unlock_requirement_base$\n   @trigger_no! [GetCultureGroup('chinese').GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('yi').GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('yue').GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('miao').GetName|Y] Culture Group"
+tradition_unlock_requirement_eastern_steppe:0 "$tradition_unlock_requirement_base$\n   @trigger_no! [GetCultureGroup('di').GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('hu').GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('xiyu').GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('huimo').GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('uralic_group').GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('tunguisic').GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('nivkh_group').GetName|Y] Culture Group"
 
-tradition_unlock_requirement_eastern_steppe:0 "$tradition_unlock_requirement_base$\n   @trigger_no! [GetCultureGroup('di').GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('hu').GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('xiyu').GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('huimo').GetName|Y] Culture Group"
-
-tradition_unlock_requirement_japanese:0 "$tradition_unlock_requirement_base$\n   @trigger_no! [GetCultureGroup('samhan').GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('japan').GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('jomon').GetName|Y] Culture Group"
+tradition_unlock_requirement_japanese:0 "$tradition_unlock_requirement_base$\n   @trigger_no! [GetCultureGroup('japan').GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('jomon').GetName|Y] Culture Group"
 
 tradition_unlock_requirement_tibetan:0 "$tradition_unlock_requirement_base$\n   @trigger_no! [GetCultureGroup('tibetan').GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('rong').GetName|Y] Culture Group"
 
