Law loc, building rework for review

--- a/localization/replace/laws_l_english.yml
+++ b/localization/replace/laws_l_english.yml
@@ -381,9 +381,9 @@ grain_laws_rep: "Grain Laws"
     grain_law_5_rep: "Bread and Circus"
     grain_law_1_rep_desc: "Not my problem."
     grain_law_2_rep_desc: "In times of desperation, it is our duty to ensure nominal aid."
-    grain_law_3_rep_desc: "Consistent grain shipments sold at a low price to the poorest citizens could stabilize our population"
+    grain_law_3_rep_desc: "Consistent grain shipments sold at a low price to the poorest citizens could stabilize our population."
     grain_law_4_rep_desc: "A grain dole at state expense may be cheaper than actually reforming the system completly."
-    grain_law_5_rep_desc: "Guys literally only want two things and it's disgusting"
+    grain_law_5_rep_desc: "Guys literally only want two things and it's disgusting."
 #######
 ##ROME
 #######
@@ -1040,13 +1040,13 @@ corruption_laws_rom_impact:0 "Enact Corruption Law"
  subsidized_grain_modifier:0 "Subsidized Grain"
  grain_dole_modifier:0 "Grain Dole"
  revoked_grain_modifier:0 "Revoked Grain"
- tannery_districts_invention:0 "Tannery Districts"
+ tannery_districts_invention: "Tannery Districts"
 
  allow_nobles_education:0 "Allow Noble Education"
  enables_latifundia_building_tt:0 "Enable Latifunida"
 
  corruption_exclusion_office:0 ""
- allow_soldier_land_grants_law:0 "Unlocks Soldier Land Grant Law"
+ allow_soldier_land_grants_law: "Unlocks Soldier Land Grant Law"
  choose_cult:0 "Choose Cult"
  integrated_any_chinese_culture:0 "Any "
  corruption_exclusion_senate:0 "Senate Exlusion on Corruption Charges"
