--- a/localization/english/ti_buildings_l_english.yml
+++ b/localization/english/ti_buildings_l_english.yml
@@ -7,23 +7,23 @@ aqueduct_building: "Aqueduct"
 sewers_building: "Sewers"
 baths_building: "Baths"
 population_building: "Granary"
-workshop_building: ""
-foundry_building: ""
-military_building: ""
-forum_building: ""
-armoury_building: ""
-winery_building: ""
-stables_building: ""
-artisan_building: ""
-jeweler_building: ""
-spice_building: ""
-tavern_building: ""
-library_building: ""
-academy_building: ""
-temple_building: ""
-gymnasium_building: ""
-theathre_building: ""
-circus_building: ""
-town_hall_building: ""
-court_building: ""
-citadel_building: ""
+workshop_building: "Mill"
+foundry_building: "Foundry"
+military_building: "Training Camp"
+forum_building: "Forum"
+armoury_building: "Armoury"
+winery_building: "Winery"
+stables_building: "Stables"
+artisan_building: "Artisan Workshop"
+jeweler_building: "Jewelers"
+spice_building: "Spicery"
+tavern_building: "Tavern"
+library_building: "Library"
+academy_building: "Academey"
+temple_building: "Temple"
+gymnasium_building: "Gymnasium"
+theathre_building: "Theatre"
+circus_building: "Hippodrome"
+town_hall_building: "Tax Office"
+court_building: "Court of Law"
+citadel_building: "Citadel"
