--- a/localization/english/ti_buildings_l_english.yml
+++ b/localization/english/ti_buildings_l_english.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+l_english:
 
 town_watch_building: "Town Watch"
 military_harbor_building: "Wharf"
@@ -40,3 +40,25 @@ fishing_building: "Fishery"
 free_farm_building: "Citizen Farm"
 hunting_building: "Hunting Camp"
 lumber_building: "Lumberyard"
+oracle_settlement_building: “Oracle“
+oracle_building: “Orace“
+church_building: “Church“
+parthenon_building: “Parthenon“
+
+#tribal
+tribal_building: “Tribal Settlement“
+tribal_tax_building: “Tribal Tax“
+council_of_elders: “Council of Elders“
+
+
+
+
+
+
+
+
+
+
+
+
+
