updates in progress

--- a/localization/english/ti_inventions_l_english.yml
+++ b/localization/english/ti_inventions_l_english.yml
@@ -6,7 +6,7 @@
  civic_construction_inv_3: "Cranes"
  civic_construction_inv_3_desc: "The use of cranes allows for huge buildings to be constructed much faster. Large walls also increease our defensiveness."
  civic_construction_inv_4: "Concrete"
- civic_construction_inv_4_desc: "Although extensively used by the Romans, concrete was found in many places prior to 300 BC. Evidence of concrete is found in Greece dating all the way back to 1200 BC, and an Assyrian aqueduect dated to 688 BC utilized water proof concrete. By 800, lime mortars were used in construction in Greece and Crete."
+ civic_construction_inv_4_desc: "Although extensively used by the Romans, concrete was found in many places prior to 300 BC. Evidence of concrete is found in Greece dating all the way back to 1200 BC, and an Assyrian aqueduect dated to 688 BC utilized water proof concrete. By 800, lime mortars were used in construction in Greece and Crete. The chinese even used a mixtre of sticky rice and eggw whites that have stood the test of time."
  civic_duty_inv: "Civic Duty"
  civic_duty_inv_desc: "A sense of civic duty in our nobles to invest in society will increase the lot of our poorer citizens and help our nation thrive."
  civic_education_inv_1: "Private Tutors"
@@ -119,6 +119,8 @@
  divine_equality_inv: "Divine Equality"
  divine_equality_inv_desc: "Equality under the divine has come in many forms, but usually disregarded foreigners. Mohism was one of the first philosophies to preach universal love--ai--that was reserved for all mankind. If our religion adopts this idea, change is likely to come from within."
 
+ greek_heating_inv: "Central Heating"
+ greek_heating_inv_desc: "By leading hot air - generated from fires - through flues in the ground, whole buildings could be heated and made more comfortable during the chillier parts of the year."
 
 
 
