invenrions and govs

--- a/localization/english/ecd_inventions_l_english.yml
+++ b/localization/english/ecd_inventions_l_english.yml
@@ -806,8 +806,8 @@
  serial_production_inv_desc:0 "Phoenician and Carthaginian ship parts were produced separately and numbered for quicker, easier and cheaper ship assembly."
  cedar_planks_inv:0 "Cedar Planks"
  cedar_planks_inv_desc:0 "Phoenicians used cypress and cedar wood for the planks of their ships, as they were less affected by humid conditions, and caulked them with bitumen to waterproof them and prevent rot."
- periplus_inv:0 "Periplous of Hanno"
- periplus_inv_desc:0 "Hanno was a Carthaginian navigator who sailed to the west coast of Africa with 60 ships to secure the gold trade in the 5th century BC."
+ periplus_inv:0 "Periplous"
+ periplus_inv_desc:0 "Many treatises on sea navigation were created by the Greeks and Phoenicians. Most famously, Hanno was a Carthaginian navigator who sailed to the west coast of Africa with 60 ships to secure the gold trade in the 5th century BC."
  alphabet_inv:0 "Phoenician Alphabet"
  alphabet_inv_desc:0 "Written from right to left, the Phoenician alphabet was the predecessor of the Aramaic, Samaritan, Anatolian, Greek and Hebrew alphabets. Simple and easily adapted to other languages, the alphabet had long-term effects on society. Literacy became possible for common people and was no longer a preserve of the priestly class."
  hundred_four_inv:0 "Council of 104"
@@ -826,12 +826,12 @@
  dream_divination_inv_desc:0 "The Numidians placed great importance on dreams. They would pray in the tombs of their ancestors and sleep there, accepting whatever they dreamed as the spirit's response."
 
  #Egyptian
- shaduf_inv:0 "Shaduf"
- shaduf_inv_desc:0 "The shaduf is an early irrigation tool that consists of a long counterbalanced pole on a pivot, attached at the end to a bucket or reed basket coated in bitumen. It is operated by means a nearly effortless swinging and lifting motion that scoops and carries water from a river or pond onto land or another body of water."
- nilometer_inv:0 "Nilometer"
- nilometer_inv_desc:0 "The nilometer was a structure for measuring the water level and clarity of the Nile during the annual flood season. It could take the form of a vertical column, a stairway leading to the Nile or a well with culvert. If the water level was low, it meant that there would be a smaller crop yield. If it was very high, it meant that the flooding could be destructive. There was a specific mark indicating how high the flooding should be to deliver the richest soil to the fields."
- basin_irrigation_inv:0 "Basin Irrigation"
- basin_irrigation_inv_desc:0 "Basin irrigation was a form of water management adapted to the flooding of the Nile. It consisted of a series of man-made banks, some parallel to the river and others perpendicular to it, creating basins of various sizes. Sluices would channel floodwater into the basins, where it would accumulate for a month until the soil was soaked through. The water would then be drained into a sloping basin or into a nearby canal and farmers would plant their seeds in the drained areas."
+ egyptian_irrigation_inv: "Egyptian Irrigation"
+ egyptian_irrigation_inv_desc: "The Egyptians were renown for their irrigation techniques and mastery of nile agriculture. Such inventions and techniques included the Shaduf, Nilometer, and Basin irrigation. "
+ nilometer_inv: "Nilometer"
+ nilometer_inv_desc: "The nilometer was a structure for measuring the water level and clarity of the Nile during the annual flood season. It could take the form of a vertical column, a stairway leading to the Nile or a well with culvert. If the water level was low, it meant that there would be a smaller crop yield. If it was very high, it meant that the flooding could be destructive. There was a specific mark indicating how high the flooding should be to deliver the richest soil to the fields."
+ basin_irrigation_inv: "Basin Irrigation"
+ basin_irrigation_inv_desc: "Basin irrigation was a form of water management adapted to the flooding of the Nile. It consisted of a series of man-made banks, some parallel to the river and others perpendicular to it, creating basins of various sizes. Sluices would channel floodwater into the basins, where it would accumulate for a month until the soil was soaked through. The water would then be drained into a sloping basin or into a nearby canal and farmers would plant their seeds in the drained areas."
  solar_calendar_inv:0 "Solar Calendar"
  solar_calendar_inv_desc:0 "The ancient Egyptian civil calendar was a solar calendar with a 365-day year divided in 12 months, each with 30 days. It was used alongside an Egyptian lunar calendar, which was preferred for some religious events."
  eternal_pyramids_inv:0 "Eternal Pyramids"
@@ -852,8 +852,8 @@
  embalming_inv_desc:0 "Egyptian priests were in charge of embalming and mummification as early as the First Dynasty. They did so by removing organs, drying out the body and covering it with natron. They believed that mummification enabled the soul to return to the preserved corpse after death. Over one million mummified animals have been found in Egypt, many of them cats."
  god_king_inv:0 "God King"
  god_king_inv_desc:0 "After his visit to the oracle of Ammon Ra in Libya, Alexander was crowned pharaoh and declared the son of Ammon. By invoking local traditions of kingship, Alexander helped to ensure his legitimacy. After his death, Ptolemy took the throne. His descendants used Egyptian royal symbols and practices such as sibling marriage to consolidate their power."
- beer_inv:0 "Beer"
- beer_inv_desc:0 "Beer was a dietary staple for the ancient Mesopotamians, who drank the thick, porridge-like brew through special straws. The Sumerian Hymn to Ninkasi is both a poem or song praising the goddess of beer, Ninkasi, and a beer recipe, dating to 1,800 BC. Egyptians later refined the beverage, making it lighter, mixing in honey and greatly increasing its popularity. The Greeks and Romans, who preferred wine, viewed beer as a barbarian drink."
+ beer_inv: "Beer"
+ beer_inv_desc: "Beer was a dietary staple for the ancient Mesopotamians, who drank the thick, porridge-like brew through special straws. The Sumerian Hymn to Ninkasi is both a poem or song praising the goddess of beer, Ninkasi, and a beer recipe, dating to 1,800 BC. Egyptians later refined the beverage, making it lighter, mixing in honey and greatly increasing its popularity. The Greeks and Romans, who preferred wine, viewed beer as a barbarian drink."
  egyptian_makeup_inv:0 "Makeup"
  egyptian_makeup_inv_desc:0 "Egyptian wall art depicts many leading figures with outlined eyes, which were made to stand out using a potent mixture of burnt almonds, copper ores, and ashes."
  hair_braids_inv:0 "Hair Braiding"
