--- a/localization/replace/offices_l_english.yml
+++ b/localization/replace/offices_l_english.yml
@@ -158,8 +158,8 @@
  office_steward:0 "Steward"
  office_physician:0 "Physician"
  office_secretary: "Secretary"
- office_master_of_ceremonies: ""
- office_master_of_the_horse: ""
+ office_master_of_ceremonies: "Oracle"
+ office_master_of_the_horse: "Logistician"
  office_justice: "Royal Judge"
  office_finance: "Tax Minister"
  office_ambassador: "Ambassador"
@@ -188,7 +188,7 @@
  office_tribune_of_the_treasury: "Tribune of the Treasury"
  office_augur: "Augur"
  office_pontifex: "High Priest"
- office_plebeian_aedile: "Master of Ceremonies"
+ office_plebeian_aedile: "Historian"
  office_republic_physician: "Physician"
  office_plebeian_tribune: "Tribune of the People"
  office_cocensor: "Co-Censor"
@@ -489,6 +489,42 @@
  office_steward_hellenic:0 "Archigrammateus"
  office_physician_hellenic:0 "Archiatros"
  #Hellenic Republic ruler
+##################  office_foreign_minister:0 "Chancellor"
+################## office_royal_tutor:0 "Royal Tutor"
+################## office_marshal:0 "Marshal"
+################## office_master_of_the_guard:0 "Master of the Guard"
+################## office_high_priest_monarchy:0 "High Priest"
+################## office_philosopher:0 "Court Philosopher"
+################## office_steward:0 "Steward"
+################## office_physician:0 "Physician"
+################## office_secretary: "Secretary"
+################## office_master_of_ceremonies: "Oracle"
+################## office_master_of_the_horse: "Logistician"
+################## office_justice: "Royal Judge"
+################## office_finance: "Tax Minister"
+################## office_ambassador: "Ambassador"
+################## office_admiral: "Chief Admiral"
+################## office_zeal: "Herald"
+
+
+######repuvic
+
+##########office_censor: "Censor"
+##########office_praetor: "Magistrate"
+##########office_tribune_of_the_soldiers: "Tribune of the Soldiers"
+##########office_tribune_of_the_treasury: "Tribune of the Treasury"
+##########office_augur: "Augur"
+##########office_pontifex: "High Priest"
+##########office_plebeian_aedile: "Historian"
+##########office_republic_physician: "Physician"
+##########office_plebeian_tribune: "Tribune of the People"
+##########office_cocensor: "Co-Censor"
+##########office_quaestor: "Treasurer"
+##########office_praetor_foreign: "Ambassador"
+##########office_tribune: "Drill Master"
+##########office_tribune_military: "Chief Admiral"
+##########office_flamen: "Philosopher"
+##########office_curule_aedile: "Temple Architect"
  #Hellenic Republic Offices
  office_censor_hellenic:0 "Thesmothete"
  office_praetor_hellenic:0 "Prytanis"
@@ -497,6 +533,24 @@
  office_augur_hellenic:0 "Daduchos"
  office_pontifex_hellenic:0 "Hierophant"
  office_plebeian_aedile_hellenic:0 "Agoranomus"
+
+
+ #office_censor_hellenic: "Thesmothete"
+ #office_praetor_hellenic: "Prytanis"
+ #office_tribune_of_the_soldiers_hellenic: "Strategos"
+ #office_tribune_of_the_treasury_hellenic: "Tribune of th"
+ #office_augur_hellenic: "Augur"
+ #office_pontifex_hellenic: "Hierophant"
+ #office_plebeian_aedile_hellenic: "Historian"
+ #office_republic_physician_hellenic: "Physician"
+ #office_plebeian_tribune_hellenic: "Tribune of the Peopl"
+ #office_cocensor_hellenic: "Co-Censor"
+ #office_quaestor_hellenic: "Areopagus"
+ #office_praetor_foreign_hellenic: "Ambassador"
+ #office_tribune_hellenic: "Polemarchos"
+ #office_tribune_military_hellenic: "Chief Admiral"
+ #office_flamen_hellenic: "Archon Basileus"
+ #office_curule_aedile_hellenic: "Temple Architect"
  #Hellenic Tribal ruler
  tribal_kingdom_ruler_hellenic:0 "Anax"
  tribal_kingdom_ruler_female_hellenic:0 "Anassa"
