--- a/localization/replace/ti_inventions_l_english.yml
+++ b/localization/replace/ti_inventions_l_english.yml
@@ -121,7 +121,7 @@
 
  greek_heating_inv: "Central Heating"
  greek_heating_inv_desc: "By leading hot air - generated from fires - through flues in the ground, whole buildings could be heated and made more comfortable during the chillier parts of the year."
-
+ tannery_districts_invention: "Tannery Districts"
 
 
 
@@ -181,6 +181,8 @@
  siege_engine_inv_3_desc: "The kick back from these Roman catapults gave the name meaning wild ass. Although there is little evidence of its origin in the 3rd century BC, it is known for its use by the Romans in the 4th century AD."
  siege_engine_inv_4: "Battering Ram"
  siege_engine_inv_4_desc: ""
+ metallurgy_inv: "Metallurgy"
+ dory_inv: "Dory"
  helmet_inv: "Stylized Helmets"
  helmet_inv_desc: "Stylized helmets specific to our culture bring unifmority in our ranks and diverity compared to our enemies. It also looks cool."
  saddle_inv: "Saddle Design"
