Trsde foods desc

--- a/localization/replace/ti_inventions_l_english.yml
+++ b/localization/replace/ti_inventions_l_english.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+l_english:
  civic_construction_inv_1: "Basic Mathematics"
  civic_construction_inv_1_desc: "Using basic mathematics, construction becomes much easier."
  civic_construction_inv_2: "Advanced Mathematics"
@@ -316,3 +316,20 @@
  greek_agriculture_inv_desc: ""
  hindu_agriculture_inv_desc: ""
  chinese_agriculture_inv_desc: ""
+
+
+
+
+
+
+ wax: “Wax“
+ waxDESC: “Wax tablets were used befofe papyrus. The Greeks would write forwards and backwards to continue their dialouge. Wax was also used for many different reasons, including the stamp-and-seal and candles we use today.“
+ concrete: “Concrete“ 
+ concretedesc: ”Opus caementicum was used by the romans through a mixture of limestone and sea water with volcanic ash to works still standing. Their secret was the pockets of unrealised con rete mixture that would allow rain to seep through, causing cracks to heal themselves. Other cultures also used comcrete to differing effect, such as the Syrians and Egyptians."
+ sulfur: "Sulfur"
+ sulfurDESC: "If this trade good made it in, just know I wom an argument."
+ nuts: “Nuts“
+ nutsDESC: “Nuts in your mouth m8“
+ flint: “Flint“
+ flintDESC: “Flint.... yeah no silly description im drunk rn“
+ 
