fix dirty loc and trade goods 6 categroy

--- a/localization/replace/ti_inventions_l_english.yml
+++ b/localization/replace/ti_inventions_l_english.yml
@@ -1,4 +1,4 @@
-l_english:
+﻿nglish:
  civic_construction_inv_1: "Basic Mathematics"
  civic_construction_inv_1_desc: "Using basic mathematics, construction becomes much easier."
  civic_construction_inv_2: "Advanced Mathematics"
@@ -322,14 +322,14 @@ l_english:
 
 
 
- wax: “Wax“
- waxDESC: “Wax tablets were used befofe papyrus. The Greeks would write forwards and backwards to continue their dialouge. Wax was also used for many different reasons, including the stamp-and-seal and candles we use today.“
- concrete: “Concrete“ 
- concretedesc: ”Opus caementicum was used by the romans through a mixture of limestone and sea water with volcanic ash to works still standing. Their secret was the pockets of unrealised con rete mixture that would allow rain to seep through, causing cracks to heal themselves. Other cultures also used comcrete to differing effect, such as the Syrians and Egyptians."
+ wax: "Wax"
+ waxDESC: "Wax tablets were used before papyrus. The Greeks would write forwards and backwards to continue their dialouge. Wax was also used for many different reasons, including the stamp-and-seal and candles we use today."
+ concrete: "Concrete" 
+ concretedesc: "Opus caementicum was used by the romans through a mixture of limestone and sea water with volcanic ash to works still standing. Their secret was the pockets of unrealised concrete mixture that would allow rain to seep through, causing cracks to heal themselves. Other cultures also used concrete to differing effect, such as the Syrians and Egyptians."
  sulfur: "Sulfur"
  sulfurDESC: "If this trade good made it in, just know I wom an argument."
- nuts: “Nuts“
- nutsDESC: “Nuts in your mouth m8“
- flint: “Flint“
- flintDESC: “Flint.... yeah no silly description im drunk rn“
+ nuts: "Nuts"
+ nutsDESC: "Beleive it or not, nuts are actually considered a fruit. Go figure."
+ flint: "Flint"
+ flintDESC: "Flint was commonly used to make fires and arrow tips up until around 1500 BC, over a century before the start of the game. However, we decided that it was still importatnt to add a specific barbarian trade good."
  
