Inventions ages added

--- a/localization/replace/ti_inventions_l_english.yml
+++ b/localization/replace/ti_inventions_l_english.yml
@@ -1,4 +1,4 @@
-﻿nglish:
+﻿l_english:
  civic_construction_inv_1: "Basic Mathematics"
  civic_construction_inv_1_desc: "Using basic mathematics, construction becomes much easier."
  civic_construction_inv_2: "Advanced Mathematics"
