quick loc update for 1 inventions

--- a/localization/replace/ti_inventions_l_english.yml
+++ b/localization/replace/ti_inventions_l_english.yml
@@ -33,6 +33,7 @@
  civic_foreign_inv_2_desc: "The primacy of our culture within our empire is what makes us great. The peoples under our administration must assimilate if they wish to get ahead."
  civic_foreign_inv_3: "Diverse Administration"
  civic_foreign_inv_3_desc: "Alexander the Great once stated that he prized meritocracy regardless of culture. Rather than limit the influence of our subjects, we should embrace their smartest and most capable and integrate them into our administration."
+ global_slaves_output_inv_6: "Severe Punishments"
  #martial
  martial_unit_inv: "Unit Cohesion"
  martial_unit_inv: "Reordering the our sub units to be more cohesive and flexible can determine the outcome of battle."
