Trade goods input to province

--- a/localization/replace/ti_inventions_l_english.yml
+++ b/localization/replace/ti_inventions_l_english.yml
@@ -324,7 +324,7 @@
 
 
  wax: "Wax"
- waxDESC: "Wax tablets were used before papyrus. The Greeks would write forwards and backwards to continue their dialouge. Wax was also used for many different reasons, including the stamp-and-seal and candles we use today."
+ waxDESC: "Beeswax was used for candles, stamps, seals, and waterproofing with evidenced around 7000BC. Wax tablets were used before papyrus. The Greeks would write forwards and backwards to continue their dialouge. Wax was also used for many different reasons, including the stamp-and-seal and candles we use today."
  concrete: "Concrete" 
  concretedesc: "Opus caementicum was used by the romans through a mixture of limestone and sea water with volcanic ash to works still standing. Their secret was the pockets of unrealised concrete mixture that would allow rain to seep through, causing cracks to heal themselves. Other cultures also used concrete to differing effect, such as the Syrians and Egyptians."
  sulfur: "Sulfur"
