--- a/localization/english/ti_buildings_l_english.yml
+++ b/localization/english/ti_buildings_l_english.yml
@@ -1,54 +1,89 @@
 l_english:
 
+fortress_building: "Fortress"
 town_watch_building: "Town Watch"
+fortress_ramparts_building: "City Walls"
+port_building: "Port"
 military_harbor_building: "Wharf"
-commerce_building: "Marketplace"
+harbour_building: "Harbour"
 aqueduct_building: "Aqueduct"
+well_building: "Well"
 sewers_building: "Sewers"
-baths_building: "Baths"
+baths_building: "Public Baths"
 population_building: "Granary"
 workshop_building: "Mill"
 foundry_building: "Foundry"
 military_building: "Training Camp"
 forum_building: "Forum"
 armoury_building: "Armoury"
-winery_building: "Winery"
 stables_building: "Stables"
 artisan_building: "Artisan Workshop"
-jeweler_building: "Jewelers"
+jeweler_building: "Jeweler"
 spice_building: "Spicery"
 tavern_building: "Tavern"
+commerce_building: "Marketplace"
+gardens_building: "Public Garden"
+fountains_building: "Fountain"
+emporium_building: "Emporium"
 library_building: "Library"
-academy_building: "Academey"
-temple_building: "Temple"
+academy_building: "Academy"
+scriptorium_building: "Scriptorium"
 gymnasium_building: "Gymnasium"
 theathre_building: "Theatre"
 circus_building: "Hippodrome"
+shrine_building: "Shrine"
+oracle_building: "Oracle"
+stupa_building: "Stupa"
+temple_building: "Temple"
+church_building: "Church"
+great_temple_building: "Great Temple"
+parthenon_building: "Parthenon"
+jewish_temple_building: "Jewish Temple"
+cathedral_building: "Cathedral"
+pagoda_building: "Pagoda"
 town_hall_building: "Tax Office"
 court_building: "Court of Law"
 citadel_building: "Citadel"
-harbour_building: "Harbour"
-great_temple_building: "Great Temple"
-gardens_building: "Gardens"
-emporium_building: "Emporium"
-scriptorium_building: "Scriptorium"
+senate_building: "Senate House"
 royal_palace_building: "Royal Palace"
-senate_house_building: "Senate House"
+local_forum_building: "Provincial Legation"
+hill_fort: "Tribal Settlement"
+sanctuary_building: "Sanctuary"
+sacred_building: "Sanctuary"
+christian_relic_building: "Sanctuary"
+monastery_building: "Monastery"
+stupa_settlement_building: "Stupa"
+vihara_building: "Vihara"
+oracle_settlement_building: "Oracle"
+barracks_building: "Barracks"
+crafts_workshop_building: "Local Workshop"
 trade_post_building: "Way Station"
+basic_settlement_infratructure_building: "Farming Infrastructure"
 breeding_building: "Breeding Enclosure"
 fishing_building: "Fishery"
 free_farm_building: "Citizen Farm"
-hunting_building: "Hunting Camp"
+latifundia_building: "Latifundia"
+villa_building: "Villa"
+hunting_building: "Hunting Lodge"
+slave_mine_building: "Mine"
 lumber_building: "Lumberyard"
-oracle_settlement_building: “Oracle“
-oracle_building: “Orace“
-church_building: “Church“
-parthenon_building: “Parthenon“
+reservoir_building: "Reservoir"
+elders_building: "Council of Elders"
+commune_building: "Commune"
+warrior_building: "Sparring Grounds"
+tribal_tax_building: "Meeting Hall"
+tribal_trade_building: "Bartering House"
+tribal_foundry_building: "Blacksmith"
+tribal_building: "Tribal Settlement"
+storehouse_building: "Storehouse"
+tribal_sacred_building: "Sacred Grounds"
+tribal_mine_building: "Mining Camp"
+tribal_lumber_building: "Lumber Camp"
+tribal_farm_building: "Farm"
+tribal_pastures_building: "Pastures"
+tribal_hunting_building: "Hunting Camp"
+tribal_breeding_building: "Breeding Camp"
 
-#tribal
-tribal_building: “Tribal Settlement“
-tribal_tax_building: “Tribal Tax“
-council_of_elders: “Council of Elders“
 
 
 
