--- a/localization/replace/offices_l_english.yml
+++ b/localization/replace/offices_l_english.yml
@@ -165,6 +165,15 @@
  office_ambassador: "Ambassador"
  office_admiral: "Chief Admiral"
  office_zeal: "Herald"
+ office_secretary_desc: "Secretary"
+ office_master_of_ceremonies_desc: "Oracle"
+ office_master_of_the_horse_desc: "Logistician"
+ office_justice_desc: "Royal Judge"
+ office_finance_desc: "Tax Minister"
+ office_ambassador_desc: "Ambassador"
+ office_admiral_desc: "Chief Admiral"
+ office_zeal_desc: "Herald"
+
  ######Republic
  #consort
  aristocratic_republic_ruler:0 "Archon"
@@ -198,6 +207,14 @@
  office_tribune_military: "Chief Admiral"
  office_flamen: "Philosopher"
  office_curule_aedile: "Temple Architect"
+
+ office_cocensor_desc: "Co-Censor"
+ office_quaestor_desc: "Treasurer"
+ office_praetor_foreign_desc: "Ambassador"
+ office_tribune_desc: "Drill Master"
+ office_tribune_military_desc: "Chief Admiral"
+ office_flamen_desc: "Philosopher"
+ office_curule_aedile_desc: "Temple Architect"
  ######Tribal
  #ruler
  tribal_kingdom_ruler:1 "Tribal Chief"
