--- a/localization/english/cultures_l_english.yml
+++ b/localization/english/cultures_l_english.yml
@@ -622,6 +622,12 @@
  COHORT_NAME_bashu_group:1 "$NUM$$ORDER$ Cohort"
  LEGION_NAME_bashu_group:0 "$NUM$$ORDER$ Cohort"
 
+ #Nivkh
+ ARMY_NAME_nivkh_group:0 "$NUM$$ORDER$ Army"
+ NAVY_NAME_nivkh_group:0 "$NUM$$ORDER$ Navy"
+ COHORT_NAME_nivkh_group:1 "$NUM$$ORDER$ Cohort"
+ LEGION_NAME_nivkh_group:0 "$NUM$$ORDER$ Cohort"
+
  #Thracian Group
  ARMY_NAME_thrace_group:0 "$NUM$$ORDER$ Warhost"
  NAVY_NAME_thrace_group:0 "$NUM$$ORDER$ Navy"
