--- a/localization/english/provincenames_l_english.yml
+++ b/localization/english/provincenames_l_english.yml
@@ -5989,7 +5989,7 @@
  PROV5988:0 "Sahara"
  PROV5989:0 "Desert"
  PROV5990:0 ""
- PROV5991:0 "Jungle"
+ PROV5991:0 "Desert"
  PROV5992:0 "Desert"
  PROV5993:0 "Cyrenaica"
  PROV5994:0 "Desert of Philoteris"
@@ -8061,37 +8061,49 @@
  PROV8060:0 ""
  PROV8061:0 ""
  PROV8062:0 ""
- PROV8063:0 "Tulih"
+ PROV8063:0 "Desert"
  PROV8064:0 "Fura"
  PROV8065:0 "Kurmut"
- PROV8066:0 "Halfa"
- PROV8067:0 "Kalas"
+ PROV8066:0 "Desert"
+ PROV8067:0 "Desert"
  PROV8068:0 "Kuweib"
- PROV8069:0 "Khafur"
+ PROV8069:0 "Desert"
  PROV8070:0 "Barkol"
  PROV8071:0 "Ileigha"
  PROV8072:0 "Abraq"
- PROV8073:0 "Hudi"
+ PROV8073:0 "Desert"
  PROV8074:0 "Shabbabah"
- PROV8075:0 "Karim"
- PROV8076:0 "Asele"
+ PROV8075:0 "Desert"
+ PROV8076:0 "Desert"
  PROV8077:0 "Ghaloa"
- PROV8078:0 "Tuyur"
+ PROV8078:0 "Desert"
  PROV8079:0 "Contra Pselchis"
  PROV8080:0 "Hairiri"
  PROV8081:0 "Dhahab"
  PROV8082:0 "Heimur"
- PROV8083:0 "Garaiyat"
- PROV8084:0 "Seiga"
+ PROV8083:0 "Desert"
+ PROV8084:0 "Desert"
  PROV8085:0 "Shoshoba"
- PROV8086:0 "Allaqi"
- PROV8087:0 "Fas"
- PROV8088:0 "Eigat"
+ PROV8086:0 "Desert"
+ PROV8087:0 "Desert"
+ PROV8088:0 "Desert"
  PROV8089:0 "Berenike Pancrysia"
  PROV8090:0 "Gidmib"
- PROV8091:0 "Biyar"
- PROV8092:0 "Duweb"
- PROV8093:0 "Hidiglib"
+ PROV8091:0 "Desert"
+ PROV8092:0 "Desert"
+ PROV8093:0 "Desert"
+ PROV8096:0 "Sudan Impassable"
+ PROV8097:0 "Sudan Impassable"
+ PROV8098:0 "Ethiopian Mountains"
+ PROV8099:0 "Ethiopian Mountains"
+ PROV8100:0 "Ethiopian Mountains"
+ PROV8101:0 "Ethiopian Impassable"
+ PROV8102:0 "Sudan Desert"
+ PROV8104:0 "Ethiopian Mountains"
+ PROV8105:0 "Punt Desert"
+ PROV8111:0 "Honshu Mountains"
+ PROV8112:0 "Honshu Mountains"
+ PROV8113:0 "Honshu Mountains"
  PROV285_aeolian:0 "Kyme"
  PROV7517_aksumite_group:0 "Olbia Pount"
  PROV1986_anatolian:0 "Pogla"
