--- a/localization/english/ti_provincenames_l_english.yml
+++ b/localization/english/ti_provincenames_l_english.yml
@@ -21,8 +21,8 @@
  PROV8137:0 ""
  PROV8138:0 ""
  PROV8139:0 ""
- PROV8140:0 "Africa Impassable"
- PROV8141:0 "Africa Impassable"
+ PROV8140:0 "Aures Mountains"
+ PROV8141:0 "Aures Mountains"
  PROV8142:0 "Africa Impassable"
  PROV8143:0 "Africa Impassable"
  PROV8144:0 "Africa Impassable"
@@ -1500,7 +1500,7 @@
  PROV9763:0 "Hokuriku Mountains"
  PROV9764:0 "Toukai Mountains"
  PROV9765:0 "Kii Mountains"
- PROV9766:0 "Eastern Saka Steppe"
+ PROV9766:0 "Aures Mountains"
  PROV9767:0 ""
  PROV9768:0 "Kunlun"
  PROV9769:0 ""
