--- a/localization/replace/ti_inventions_l_english.yml
+++ b/localization/replace/ti_inventions_l_english.yml
@@ -162,6 +162,8 @@
  civic_foreign_inv_3_desc: "Alexander the Great once stated that he prized meritocracy regardless of culture. Rather than limit the influence of our subjects, we should embrace their smartest and most capable and integrate them into our administration."
  civic_amend_inv: "Right to Amend"
  civic_amend_inv_desc: "Amending our constitution may be seen as heretical by some, but necessary by others as time moves forward. One can only hope we do not amend it into a dictatorship...."
+ cursus_honorum_inv: "Cursus Honorum"
+ cursus_honorum_inv_desc: "Meaning the course of honors, the cursus honorum was the sequential order of public offices held by aspiring politicians in the Roman Republic and the early Roman Empire. It was designed for men of senatorial rank. The cursus honorum comprised a mixture of military and political administration posts; the ultimate prize being the consulship. Althought originally just a guide, it became law under Sulla due to his fears of young Scipian and Marian types to upend the traditions of the Republic. Cicero was proud that he gained each office in his year, an accomplishment reserved for the most talented and cunning politicians."
  #martial
  martial_aux_inv: "Auxiliaries"
  martial_unit_inv: "Unit Cohesion"
